--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,6 @@ footer {
     padding: 15px;
     background-color: #172672;
 
-    font-size: 1.8rem;
     color: #fff;
 }
 
@@ -32,7 +31,7 @@ footer {
     transition: all 0.4s ease;
 }
 
-.social-links a>i {
+.social-links a > i {
     width: 35px;
     height: 35px;
     padding: 8px;
@@ -42,7 +41,7 @@ footer {
 
 footer h3 {
     text-transform: uppercase;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 .quick-links ul {
@@ -57,6 +56,7 @@ footer h3 {
 }
 
 .quick-links a {
+    font-size: 1.8rem;
     text-decoration: none;
     padding-bottom: 3px;
 }
@@ -73,7 +73,7 @@ footer h3 {
 }
 
 .contact-us span {
-    padding-bottom: 15px;
+    padding-bottom: 1.5rem;
 
     font-size: 1.4rem;
 }
@@ -83,13 +83,13 @@ footer i {
 }
 
 .copyright p {
-    font-size: 1.1rem;
-    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
 }
 
 @media screen and (min-width: 640px){
     footer {
-        padding-top: 30px;
+        padding: 3rem 4.5rem 0;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
@@ -105,7 +105,6 @@ footer i {
     }
 
     .copyright {
-        padding-top: 50px;
         width: 100%;
     }
 }
