feat: added the sign-in page and styled it accordingly

--- a/css/signup.css
+++ b/css/signup.css
@@ -1,6 +1,6 @@
 /*********************************************
 ***********
-*********** CONTACT PAGE STYLING *************
+*********** SIGN UP PAGE STYLING *************
 ***********
 *********************************************/
 .parent-container {
