--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@ header {
     padding: 25px 12px;
     background-color: #D5DBF9;
     box-shadow: 5px 5px 30px #FFFFFF;
-
+    z-index: 2;
     display: flex;
     justify-content: space-between;
     align-items: center;
