--- a/css/downloadpage.css
+++ b/css/downloadpage.css
@@ -6,6 +6,7 @@
 
 body{
     background-color: #d5dbf9;
+    font-family: 'Lato', sans-serif;
 }
 
 #upper-container, #lower-container{
@@ -28,18 +29,30 @@ body{
     width: 40vh;
     border-radius: 15px;
     position: absolute;
-    top: 10%;
-    right: 0%;
-    z-index: 1;
-    transform: rotate(30deg);
+    top: 20%;
+    right: 10%;
+    /* z-index: -1; */
+    /* transform: rotate(45deg); */
+}
+
+#boxed-container{
+    background-color: #d5dbf9;
+    height: 40vh;
+    width: 40vh;
+    border-radius: 15px;
+    position: absolute;
+    top: 20%;
+    right: 10%;
+    /* z-index: -1; */
+    transform: rotate(45deg);
 }
 
 #boxed-container2 h3{
-    font-size: 30px;
+    font-size: 2.2rem;
     color: rgb(255, 255, 255);
     margin-top: 45%;
     text-align: center;
-    transform: rotate(-22deg);
+    transform: rotate(-45deg);
 }
 
 
@@ -50,15 +63,23 @@ body{
 }
 
 #boxed-container1 h4{
+    font-size: 1.2rem;
     color: #1C4999;
 }
 
 #boxed-container1 button{
+    background-color: rgb(255, 255, 255);
+    border: 1px solid #d5dbf9;
     width: auto;
+    padding: 10px;
     margin-top: 10px;
     position: relative;
     left: 60%;
-   
+}
+
+h4 a{
+    text-decoration: none;
+    color: #D4C400;
 }
 
 /* lower section */
@@ -78,9 +99,13 @@ body{
     background-color: #FFFBCC;
     color: #1C4999;
     font-style: italic;
-    text-align: right;
+    text-align: center;
     position: relative;
     left: 68%;
     top: -70%;
+}
+#container2 h5{
+    text-align: center;
+    margin-top: 10px;
 }
 
