--- a/css/footer.css
+++ b/css/footer.css
@@ -74,8 +74,11 @@ footer h3 {
 
 .contact-us span {
     padding-bottom: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
 
-    font-size: 1.4rem;
+    font-size: 1.8rem;
 }
 
 footer i {
