--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,4 @@
+/* FOOTER STYLING */
 footer {
     margin: 20px 0 0;
     padding: 15px;
@@ -73,8 +74,11 @@ footer h3 {
 
 .contact-us span {
     padding-bottom: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
 
-    font-size: 1.4rem;
+    font-size: 1.8rem;
 }
 
 footer i {
