--- a/css/downloadpage.css
+++ b/css/downloadpage.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
 }
 
 body{
@@ -11,7 +12,7 @@ body{
 
 #upper-container, #lower-container{
     width: 100%;
-    height: 70vh;
+    height: 100%;
     background-color: rgb(255, 255, 255);
 }
 
@@ -23,32 +24,32 @@ body{
 }
 
 #boxed-container2{
-    background-color: #5169E8;
+    background-color: #5169e8;
     opacity: 0.8;
     height: 40vh;
     width: 40vh;
-    border-radius: 15px;
+    border-radius: 10%;
     position: absolute;
     top: 20%;
-    right: 10%;
+    right: 20%;
     /* z-index: -1; */
     /* transform: rotate(45deg); */
 }
-
+ 
 #boxed-container{
     background-color: #d5dbf9;
     height: 40vh;
     width: 40vh;
-    border-radius: 15px;
+    border-radius: 20px;
     position: absolute;
     top: 20%;
     right: 10%;
-    /* z-index: -1; */
+    /* z-index: -1;*/
     transform: rotate(45deg);
-}
+} 
 
 #boxed-container2 h3{
-    font-size: 2.2rem;
+    font-size: 3.0rem;
     color: rgb(255, 255, 255);
     margin-top: 45%;
     text-align: center;
@@ -59,11 +60,11 @@ body{
 #boxed-container1{
     position: absolute;
     top: 70%;
-    left: 70%;
+    left: 50%;
 }
 
 #boxed-container1 h4{
-    font-size: 1.2rem;
+    font-size: 2.5rem;
     color: #1C4999;
 }
 
@@ -74,7 +75,7 @@ body{
     padding: 10px;
     margin-top: 10px;
     position: relative;
-    left: 60%;
+    left: 50%;
 }
 
 h4 a{
@@ -85,7 +86,8 @@ h4 a{
 /* lower section */
 #lower-container{
     padding-left: 50px;
-    margin-top: 90px;
+    margin-top: 100px;
+    
 }
 
 #lower-container img{
@@ -93,20 +95,80 @@ h4 a{
 }
 
 .split-options{
-    width: 30%;
-    height: 70%;
-    line-height: 25px;
-    font-size: 1rem;
+    font-size: 2rem;
     background-color: #FFFBCC;
     color: #1C4999;
     font-style: italic;
-    text-align: center;
-    position: relative;
+    text-align: right;
+    position: absolute;
+    top: 90%;
     left: 68%;
-    top: -70%;
-}
-#container2 h5{
+    height: auto;
+    line-height: 25px;
+ }
+ 
+/* #container2 h5{
     text-align: center;
     margin-top: 10px;
+} */
+
+/* responsiveness*/
+@media only screen and (max-width: 800px) {
+    
+#upper-container #container2{
+    background: linear-gradient(to bottom, rgb(81, 105, 232), rgb(213, 219, 249));
+    height: 15%;
+    width: 15%;
+    border-radius: 10%;
+    position: absolute;
+    top: 20%;
+    right: 20%;
+    transform: rotate(45deg);
+}
+     
+#boxed-container, #boxed-container2{
+    visibility: collapse;
+} 
+
+#boxed-container1{
+    transform: rotate(-45deg);
+    position: absolute;
+    top: 10%;
+    left: 40%;
 }
 
+#boxed-container1 h4{
+    color: rgb(255, 255, 255);
+    font-style: italic;
+    font-size: 1.3rem;
+}
+
+#boxed-container1 button{
+    background-color: #D4C400;
+    border: 3px solid #d5dbf9;
+    width: 100%;
+    padding: 10px;
+    margin-top: 30px;
+    position: relative;
+    left: 30%;
+}
+
+h4 a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 1.3rem;
+}
+
+
+.split-options{
+    font-size: 1.2rem;
+    color: #1C4999;
+    text-align: right;
+    position: absolute;
+    top: 50%;
+    left: 68%;
+    height: auto;
+    line-height: 10px;
+    
+}
+}
