--- a/css/downloadpage.css
+++ b/css/downloadpage.css
@@ -2,17 +2,16 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    
 }
 
 body{
-    background-color: #6779DD;
+    background-color: #d5dbf9;
     font-family: 'Lato', sans-serif;
 }
 
 #upper-container, #lower-container{
     width: 100%;
-    height: 100%;
+    height: 70vh;
     background-color: rgb(255, 255, 255);
 }
 
@@ -24,32 +23,32 @@ body{
 }
 
 #boxed-container2{
-    background-color: #6779DD;
+    background-color: #5169E8;
     opacity: 0.8;
     height: 40vh;
     width: 40vh;
-    border-radius: 10%;
+    border-radius: 15px;
     position: absolute;
-    top: 10%;
-    right: 20%;
+    top: 20%;
+    right: 10%;
     /* z-index: -1; */
     /* transform: rotate(45deg); */
 }
- 
+
 #boxed-container{
     background-color: #d5dbf9;
     height: 40vh;
     width: 40vh;
-    border-radius: 20px;
+    border-radius: 15px;
     position: absolute;
-    top: 10%;
+    top: 20%;
     right: 10%;
-    /* z-index: -1;*/
+    /* z-index: -1; */
     transform: rotate(45deg);
-} 
+}
 
 #boxed-container2 h3{
-    font-size: 3.0rem;
+    font-size: 2.2rem;
     color: rgb(255, 255, 255);
     margin-top: 45%;
     text-align: center;
@@ -59,23 +58,23 @@ body{
 
 #boxed-container1{
     position: absolute;
-    top: 55%;
-    left: 50%;
+    top: 70%;
+    left: 70%;
 }
 
 #boxed-container1 h4{
-    font-size: 2.5rem;
+    font-size: 1.2rem;
     color: #1C4999;
 }
 
 #boxed-container1 button{
-    background-color: #03045E;
+    background-color: rgb(255, 255, 255);
     border: 1px solid #d5dbf9;
     width: auto;
     padding: 10px;
     margin-top: 10px;
     position: relative;
-    left: 50%;
+    left: 60%;
 }
 
 h4 a{
@@ -86,8 +85,7 @@ h4 a{
 /* lower section */
 #lower-container{
     padding-left: 50px;
-    margin-top: 100px;
-    
+    margin-top: 90px;
 }
 
 #lower-container img{
@@ -95,80 +93,20 @@ h4 a{
 }
 
 .split-options{
-    font-size: 2rem;
-    background-color: #03045E;
-    color: #fff;
-    font-style: italic;
-    text-align: right;
-    position: absolute;
-    top: 90%;
-    left: 68%;
-    height: auto;
+    width: 30%;
+    height: 70%;
     line-height: 25px;
- }
- 
+    font-size: 1rem;
+    background-color: #FFFBCC;
+    color: #1C4999;
+    font-style: italic;
+    text-align: center;
+    position: relative;
+    left: 68%;
+    top: -70%;
+}
 #container2 h5{
     text-align: center;
     margin-top: 10px;
 }
 
-/* responsiveness*/
-@media only screen and (max-width: 800px) {
-    
-#upper-container #container2{
-    background: linear-gradient(to bottom, rgb(81, 105, 232), rgb(213, 219, 249));
-    height: 15%;
-    width: 15%;
-    border-radius: 10%;
-    position: absolute;
-    top: 20%;
-    right: 20%;
-    transform: rotate(45deg);
-}
-     
-#boxed-container, #boxed-container2{
-    visibility: collapse;
-} 
-
-#boxed-container1{
-    transform: rotate(-45deg);
-    position: absolute;
-    top: 10%;
-    left: 40%;
-}
-
-#boxed-container1 h4{
-    color: rgb(255, 255, 255);
-    font-style: italic;
-    font-size: 1.3rem;
-}
-
-#boxed-container1 button{
-    background-color: #D4C400;
-    border: 3px solid #d5dbf9;
-    width: 100%;
-    padding: 10px;
-    margin-top: 30px;
-    position: relative;
-    left: 30%;
-}
-
-h4 a{
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    font-size: 1.3rem;
-}
-
-
-.split-options{
-    font-size: 1.2rem;
-    color: #1C4999;
-    text-align: right;
-    position: absolute;
-    top: 50%;
-    left: 68%;
-    height: auto;
-    line-height: 10px;
-    
-}
-}
