--- a/css/index.css
+++ b/css/index.css
@@ -1,192 +1,193 @@
-.container {
-  max-width: 1440px;
-}
+.parent-container {
+  position: relative;
+  margin: auto;
+  margin-bottom: 7.5rem;
+  padding: 4.5rem 1.5rem;
+  font-size: 2rem;
 
-.content {
-  margin: 80px;
-}
+  font-size: 1.8rem;
 
-.rectangle h1 {
-    text-align: center;
-}
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
 
-.first {
   text-align: center;
 }
 
-h2 {
-  margin-top: 20px;
-  margin-bottom: 40px;
+.parent-container > section{
+  max-width: 96rem;
 }
 
-.box-head {
-  background: #194993;
-  padding: 10px;
-  width: 170px;
-  height: 50px;
+.banner img{
+  position: absolute;
+  top: -4.5rem;
+  left: 0;
+  width: 100vw;
+
+  z-index: -1;
+}
+
+.banner h1{
+  padding: 4rem 2rem;
+
+  font-size: 4rem;
+  color: #FFEB00;
+}
+
+.cards-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.card{
+  padding: 6rem 2rem;
+  max-width: 34.5rem;
+  height: 37rem;
+  box-shadow: 2px 4px 25px -4px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
-  font-family: "Jost";
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 28px;
+  background-color: #E8EEF6;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+
+  font-size: 2rem;
+}
+
+.step{
+  background-color: #fff;
+  padding: 1.5rem 2rem;
+  border-radius: 2rem;
+
   display: flex;
   align-items: center;
-  text-align: center;
-  color: #f4e429;
-  margin: auto;
+  gap: 1.5rem;
+
+  color: #194993;
+  font-weight: 600;
+  text-decoration: none;
 }
 
-.how-box {
+.csv-json-info{
   display: flex;
-  text-align: center;
-  margin-bottom: 50px;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-.how {
-  width: 300px;
-  height: 250px;
-  background: #fafafa;
-  box-shadow: 18px 18px 12px -8px rgba(0, 0, 0, 0.25);
+.csv-json,
+.feature{
+  padding: 3rem;
+  background-color: #172672;
   border-radius: 20px;
-  padding: 40px 20px;
+
+  color: #fff;
+  font-size: 2rem;
 }
 
-.how p {
-  margin-top: 30px;
+.csv-json img{
+  display: inline-block;
+  margin-top: -12rem;
+  width: 10rem;
+  height: 10rem;
 }
 
-.arrow {
-  height: 15px;
-  align-self: center;
-  margin-right: 50px;
-  margin-left: 50px;
-  width: 40px;
-}
-
-.para2 {
-  font-size: 20px;
-}
-
-.csv img {
-  width: 100px;
-}
-
-.json img {
-  width: 75px;
-}
-
-.csv {
-  background-color: white;
-  border: 3px solid #172672;
-  padding: 20px;
-  border-radius: 50%;
-  width: 150px;
-  margin: auto;
-  position: absolute;
-  bottom: 0;
-  left: 22%;
-  text-align: center;
-}
-
-.json {
-  background-color: white;
-  border: 3px solid #172672;
-  padding: 20px;
-  border-radius: 50%;
-  width: 150px;
-  margin: auto;
-  position: absolute;
-  bottom: 0;
-  right: 22%;
-  text-align: center;
-}
-
-.csv-json {
-  background-color: #172672;
-  padding: 30px;
-  margin-top: 150px;
-  border-radius: 10px;
-  color: white;
-}
-
-.second {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 30px;
-}
-
-.third {
+.features-section{
+  padding: 1.5rem;
   display: flex;
-  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
 
-.features {
-  background-color: #172672;
-  border-radius: 10px;
-  margin-top: 50px;
-  padding: 20px;
-  color: white;
-  text-align: center;
-  width: 280px;
+.final-section{
+  padding: 5rem 0;
+  font-size: 2.8rem;
 }
 
-.last {
-  margin-top: 50px;
-  text-align: center;
-  color: #1f3297;
-  font-size: 25px;
+@media screen and (min-width: 640px){
+  .banner h1{
+    margin: -6.5rem auto 0;
+    max-width: 60rem;
+    padding: 5rem;
+  }
+
+  .cards-container{
+    flex-flow: row wrap;
+  }
+
+  .csv-json-info{
+    flex-direction: row;
+  }
+
+  .card{
+    max-width: 45%;
+  }
+
+  .features-section{
+    flex-flow:row wrap;
+  }
+
+  .feature{
+    height: 48rem;
+    width: 48%;
+  }
 }
 
-@media only screen and (max-width: 785px) {
-  .how-box {
-    display: block;
+@media screen and (min-width: 960px){
+  .card {
+      max-width: 33%;
+    }
+
+  .features-section {
+    padding: 4rem;
   }
 
-  .how {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 50px;
-    width: 400px;
+  .feature {
+    height: 48rem;
+    width: 48%;
   }
+}
 
-  .csv img {
-    width: 70px;
-  }
-
-  .csv {
-    width: 100px;
-    padding: 10px;
+@media screen and (min-width: 1280px) {
+  .parent-container > section {
+    max-width: 102.4rem;
     margin: auto;
-    position: relative;
-    bottom: 20%;
-    left: 2%;
-    text-align: center;
   }
 
-  .json img {
-    width: 50px;
+  .card {
+    max-width: 33%;
   }
 
-  .arrow {
-    display: none;
+  .features-section {
+    padding: 4rem;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .parent-container {
+    gap: 22rem;
+  }
+  
+  .parent-container > section {
+    max-width: 128rem;
   }
 
-  .json {
-    width: 100px;
-    padding: 10px;
-    margin: auto;
-    position: relative;
-    bottom: 20%;
-    right: 2%;
-    text-align: center;
+  .card {
+    max-width: 33%;
   }
 
-  .third {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  .features-section {
+    padding: 4rem;
   }
 
-  .last {
-    font-size: 18px;
+  .feature {
+    height: 48rem;
+    width: 23%;
   }
 }
